--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>My test page</title>
+    <title>My DS4200 page</title>
     <link rel="stylesheet" href="style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Kalam:wght@700&family=League+Spartan&family=Plus+Jakarta+Sans:wght@400;500;600&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Welcome to Jozurf's DS 4200 website</h1>
+    <h1>Welcome to Joseph Trisnandi's DS 4200 website</h1>
     <p>
         Bio: I love basketball, volleyball, hiking, gaming, watching anime or any animated movies.
     </p>
